--- a/spring-boot-with-docker/src/main/resources/application.properties
+++ b/spring-boot-with-docker/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/restwithspringboot?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://db:3306/spring_boot_with_docker?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=docker
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -12,10 +12,10 @@ spring.jpa.show-sql=false
 
 # Flyway Configs
 
-spring.flyway.url=jdbc:mysql://localhost:3306/restwithspringboot?useTimezone=true&serverTimezone=UTC&useSSL=false
-spring.flyway.schemas=restwithspringboot
+spring.flyway.url=jdbc:mysql://db:3306/spring_boot_with_docker?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.flyway.schemas=spring_boot_with_docker
 spring.flyway.user=root
-spring.flyway.password=admin123
+spring.flyway.password=docker
 
 # Jackson Configs
 #spring.jackson.default-property-inclusion=non_null
