--- a/.trevis.yml
+++ b/.trevis.yml
@@ -1,5 +1,7 @@
 language: bash
 services: docker
+before_install:
+  - echo "We are build Docker Images!!!"
 script:
   - docker-compose build
 before_deploy:
